@@ -36,7 +36,7 @@ org.exolab.castor.marshalling.validation=true
 # Comma separated list of SAX 2 features that should be enabled
 # for the default parser.
 #
-#org.exolab.castor.features=
+#org.exolab.castor.sax.features=
 
 
 # True if should produce verbose messages
