@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1585 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added property to disable selected features on SAX2 parser used internally by Castor XML.
+       Details: http://jira.codehaus.org/browse/CASTOR-1585
+       (Werner - 20060930)
+
 XML:   Resolved issue CASTOR-1596 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Expanded JMethod.addException() to correctly insert @throws Javadoc.
        Details: http://jira.codehaus.org/browse/CASTOR-1596
